--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ VITE_HEYGEN_API_KEY=sk_V2_hgu_kScplEjwq1c_Fwa4Z47TkSzIyvWCKZkwkeWuc03SzDk0
 VITE_HEYGEN_SERVER_URL=https://api.heygen.com
 
 # Backend API URL
-VITE_BACKEND_URL=http://localhost:8000
+VITE_BACKEND_URL=https://sales-education-platform-with-ai-avatar.onrender.com
