--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.9.15",
+    "livekit-client": "^2.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
@@ -26,4 +28,3 @@
     "vite": "^5.0.8"
   }
 }
-
